--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "commit": "cz"
+    "commit": "cz",
+    "test": "jest"
   },
   "dependencies": {
     "commitizen": "^4.3.0",
@@ -16,12 +17,17 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.23.8",
+    "@babel/preset-react": "^7.23.3",
     "@commitlint/cli": "^18.0.0",
     "@commitlint/config-conventional": "^18.0.0",
+    "autoprefixer": "^10.0.1",
+    "babel-jest": "^29.7.0",
     "commitizen": "^4.3.0",
     "cz-conventional-changelog": "^3.3.0",
-    "autoprefixer": "^10.0.1",
+    "jest": "^29.7.0",
     "postcss": "^8",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.3.0"
   },
   "config": {
