--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@next/font": "^14.0.4",
     "commitizen": "^4.3.0",
     "next": "14.0.4",
     "react": "^18",
